Stripe: fix setting merchant account

--- a/app/views/pages/dashboard/payments/account/stripe-dashboard.liquid
+++ b/app/views/pages/dashboard/payments/account/stripe-dashboard.liquid
@@ -1,5 +1,5 @@
 {% liquid
-  function account = 'modules/stripe/lib/payments/account'
+  function account = 'modules/stripe/lib/payments/account', user_id: context.current_user.id
 
   if account.id
     function login_link_url = 'modules/stripe/lib/account/login_link/call', account: account
