--- a/app/views/partials/theme/simple/payments/account/success.liquid
+++ b/app/views/partials/theme/simple/payments/account/success.liquid
@@ -1,6 +1,6 @@
 <div class="p-4 mb-4 bg-gray-200 border rounded" data-test="information">
   <p>
-    {{ 'app.payments.success.account' | t }}
+    {{ 'app.payments.account.success.payout_account_added' | t }}
   </p>
 </div>
 
