--- a/modules/stripe/public/views/pages/webhooks/account_updated.liquid
+++ b/modules/stripe/public/views/pages/webhooks/account_updated.liquid
@@ -4,7 +4,8 @@ method: post
 layout_name: ''
 ---
 {% liquid
-  function valid_webhook = 'modules/stripe/lib/webhooks/must_be_valid_webhook', webhook_path: '/webhooks/account_updated'
+  function valid_webhook = 'modules/stripe/lib/webhooks/must_be_valid_webhook', webhook_path: '/webhooks/account_updated', context: context
+  log valid_webhook, type: 'valid_webhook'
   unless valid_webhook
     response_status 403
     break
@@ -14,7 +15,7 @@ layout_name: ''
   if object.valid
     echo object
   else
-    response_status 403
+    response_status 500
     echo object
   endif
 %}
