--- a/modules/stripe/public/views/partials/lib/account/connect.liquid
+++ b/modules/stripe/public/views/partials/lib/account/connect.liquid
@@ -2,7 +2,7 @@
   function object = 'modules/stripe/lib/stripe_account/fetch/call', params: params
 
   if object.valid
-    function object = 'modules/stripe/lib/account/create/call', object: object
+    function object = 'modules/stripe/lib/account/create/call', object: object, current_user: current_user
   endif
 
   return object
