--- a/modules/stripe/public/views/partials/lib/webhooks/account_updated/call.liquid
+++ b/modules/stripe/public/views/partials/lib/webhooks/account_updated/call.liquid
@@ -1,5 +1,5 @@
 {% liquid
-  function object = 'modules/stripe/lib/webhooks/account_updated/build', post_params
+  function object = 'modules/stripe/lib/webhooks/account_updated/build', post_params: post_params
   function object = 'modules/stripe/lib/webhooks/account_updated/validate', object: object
   if object.valid
     function object = 'modules/stripe/lib/account/update/call', object: object
