--- a/app/views/pages/dashboard/payments/account/success.liquid
+++ b/app/views/pages/dashboard/payments/account/success.liquid
@@ -1,5 +1,5 @@
 {% liquid
-  function object = 'modules/stripe/lib/account/connect', params: context.params
+  function object = 'modules/stripe/lib/account/connect', params: context.params, current_user: context.current_user
 
   if object.valid
     include 'theme/simple/payments/account/success'
