--- a/modules/stripe/public/views/partials/lib/account/update/build.liquid
+++ b/modules/stripe/public/views/partials/lib/account/update/build.liquid
@@ -1,5 +1,6 @@
 {% liquid
   graphql g = 'modules/stripe/accounts', gateway_id: object.id
+  log g, type: 'graph'
   assign account = g.accounts.results.first
 %}
 
