--- a/modules/stripe/public/views/partials/test/commands/account/connect_url_test.liquid
+++ b/modules/stripe/public/views/partials/test/commands/account/connect_url_test.liquid
@@ -1,7 +1,11 @@
 {% liquid
-  function connect_url = 'modules/stripe/lib/account/connect_url'
+  function connect_url = 'modules/stripe/lib/account/connect_url', context: context
 
   if connect_url == blank
     include 'test/register_error', contract: contract, field_name: 'base', key: 'test.should.not.be_blank'
   endif
+
+  unless connect_url contains context.location.host
+    include 'test/register_error', contract: contract, field_name: 'connect_url', message: 'not contains host'
+  endunless
 %}
