fix follow/unfollow button

--- a/app/views/pages/dashboard/index.liquid
+++ b/app/views/pages/dashboard/index.liquid
@@ -5,7 +5,7 @@ metadata:
     - label: app.feed.title
 ---
 {% liquid
-  function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true, followships: true
   include 'lib/validate_profile_completeness', profile: current_profile
 
   assign template = "/dashboard/{slug}/{section}"
