--- a/app/views/partials/theme/simple/items/index.liquid
+++ b/app/views/partials/theme/simple/items/index.liquid
@@ -4,7 +4,7 @@
 
     <div class="grid grid-cols-3 gap-5">
       {% for item in items.results %}
-        {% include 'theme/simple/items/card', item: item %}
+        {% render 'theme/simple/items/card', item: item, current_profile: current_profile %}
       {% else %}
         <p class="text-lg">{{ 'app.no_items_found' | t }}</p>
       {% endfor %}
