--- a/app/views/pages/items/index.liquid
+++ b/app/views/pages/items/index.liquid
@@ -3,7 +3,7 @@ slug: search
 ---
 
 {% liquid
-  function current_profile = 'lib/current_profile', user_id: context.current_user.id
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id, followships: true
 
   function query = 'lib/data/queries/items/search/build', query: context.params, limit: 50
   function items = 'lib/data/queries/items/search/execute', query: query
