--- a/app/views/partials/theme/simple/profile/sections/groups.liquid
+++ b/app/views/partials/theme/simple/profile/sections/groups.liquid
@@ -1,6 +1,6 @@
 <section class="grid grid-cols-3 gap-5">
   {% for record in list.results %}
-    {% render 'theme/simple/groups/card', group: record %}
+    {% render 'theme/simple/groups/card', group: record, current_profile: current_profile %}
   {% else %}
     <p class="text-lg">{{ 'app.no_groups_found' | t }}</p>
   {% endfor %}
