--- a/app/views/pages/contacts/create.liquid
+++ b/app/views/pages/contacts/create.liquid
@@ -3,7 +3,7 @@ slug: contacts
 method: post
 ---
 {% liquid
-  function object = 'lib/commands/contacts/create', object: context.params.contact
+  function object = 'lib/commands/contacts/create', object: context.params.contact, host: context.location.host
   if object.valid
     include 'redirect_to', url: '/', notice: 'app.models.contacts.message_sent'
   else
