--- a/app/views/partials/lib/commands/groups/membership/toggle.liquid
+++ b/app/views/partials/lib/commands/groups/membership/toggle.liquid
@@ -12,11 +12,16 @@
 
   if action_name == 'leave'
     assign event_type = 'user_left_group'
-    function relation = 'lib/data/queries/relationships/find', name: 'membership', l_id: profile.id, r_id: group.id
+    function relation = 'lib/data/queries/relationships/find', name: 'owner', l_id: profile.id, r_id: group.id
+    unless relation
+      function relation = 'lib/data/queries/relationships/find', name: 'membership', l_id: profile.id, r_id: group.id
 
-    if relation
-      function object = 'lib/commands/relationships/delete', object: relation
-    endif
+      if relation
+        function object = 'lib/commands/relationships/delete', object: relation
+      endif
+    else
+      break
+    endunless
   endif
 
   if object.valid
