Apply suggestions from code review

--- a/app/views/partials/theme/simple/contacts/form.liquid
+++ b/app/views/partials/theme/simple/contacts/form.liquid
@@ -68,7 +68,7 @@
       {% include 'theme/simple/field_error', errors: object.errors.message %}
     </div>
     <p class="md:ml-64">
-      <button class="button">Send Message</button>
+       {{ 'app.models.contacts.form.submit' | t }}
     </p>
   </form>
 </div>
