--- a/app/views/partials/lib/commands/groups/membership/toggle.liquid
+++ b/app/views/partials/lib/commands/groups/membership/toggle.liquid
@@ -1,6 +1,7 @@
 {% liquid
   assign now = 'now' | to_time
   assign id = null
+  assign c = '{ "errors": {}, "valid": true }' | parse_json
 
   function profile = 'lib/data/queries/profiles/find', user_id: user_id
   function group = 'lib/data/queries/groups/find', id: group_id
@@ -20,7 +21,7 @@
         function object = 'lib/commands/relationships/delete', object: relation
       endif
     else
-      break
+      include 'lib/register_error', contract: c, field_name: 'base', key: 'app.errors.cannot_sell_to_yourself'
     endunless
   endif
 
