--- a/app/views/partials/lib/data/queries/items/search/build.liquid
+++ b/app/views/partials/lib/data/queries/items/search/build.liquid
@@ -15,7 +15,8 @@
   "keyword": {{ query.k | json }},
   "sort": {{ sort_options[query.sort] | json }},
   "owner": {{ owner | json }},
-  "category": {{ query.category | json }}
+  "category": {{ query.category | json }},
+  "withOrders": {{ withOrders | default: false }}
 
 }
 {% endparse_json %}
