--- a/app/views/partials/theme/simple/activities/feed_unit.liquid
+++ b/app/views/partials/theme/simple/activities/feed_unit.liquid
@@ -5,7 +5,7 @@
 
   <div class="py-2 leading-snug break-all">
     <p>{{ payload.object.description }}</p>
-    <p>{% print payload.object.body %}</p>
+    <p>{{ payload.object.body }}</p>
   </div>
 
   <!-- Photo should be inserted only if event = create -->
