--- a/app/views/partials/lib/data/queries/items/search.liquid
+++ b/app/views/partials/lib/data/queries/items/search.liquid
@@ -1,6 +1,8 @@
 {% liquid
-  function query = 'lib/data/queries/items/search/build', limit: limit, owner: owner, params: context.params
+  function query = 'lib/data/queries/items/search/build', limit: limit, owner: owner, params: params
   function items = 'lib/data/queries/items/search/execute', query: query
+
+  log query
 
   return items
 %}
