--- a/app/views/partials/theme/simple/home/quick_search_form.liquid
+++ b/app/views/partials/theme/simple/home/quick_search_form.liquid
@@ -1,6 +1,6 @@
 <div class="mr-5">
   <form action="/quick_search" name="search">
-    <input class="form-input mr-2" name="search-k" type="text" placeholder="{% print 'app.quick_search.name' | t %}" />
+    <input class="form-input mr-2" name="keyword" type="text" placeholder="{% print 'app.quick_search.name' | t %}" />
     <button name="submit" value="search" class="button button-secondary button-sm">{{ 'app.search.search' | t  }}</button>
   </form>
 </div>
