--- a/app/views/partials/lib/data/queries/items/search/execute.liquid
+++ b/app/views/partials/lib/data/queries/items/search/execute.liquid
@@ -1,8 +1,6 @@
 {% liquid
   graphql r = 'items/search', args: query
-
-  echo query
-  echo r
+  include 'lib/handle_graphql_response', r: r, name: 'queries/search/execute'
 
   return r.items
 %}
