--- a/app/views/pages/groups/index.liquid
+++ b/app/views/pages/groups/index.liquid
@@ -2,7 +2,7 @@
 slug: groups
 ---
 {% liquid
-  function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true, membership: true
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id, membership: true
 
   function list = 'lib/data/queries/groups/search', limit: 100
 
