--- a/app/views/partials/lib/data/queries/search/filters.liquid
+++ b/app/views/partials/lib/data/queries/search/filters.liquid
@@ -4,8 +4,8 @@
   assign sort_options = 'lib.sort_options' | t
   hash_assign search_form['sort_options'] = sort_options
 
-  function categories = 'lib/data/queries/categories/search'
-  hash_assign search_form['categories'] = categories
+  function categories = 'lib/data/queries/categories/search', limit: 100
+  hash_assign search_form['categories'] = categories | dig: 'results' | map: 'key'
 
   hash_assign search_form['query'] = query
 
