--- a/app/views/partials/theme/simple/categories/index.liquid
+++ b/app/views/partials/theme/simple/categories/index.liquid
@@ -1,32 +1,53 @@
-<h1 class="text-3xl">
-  {{ "categories." | append: category | t }} Category
-</h1>
+<div class="w-full mx-auto">
+  <div class="mb-5 text-right">
+    <a href="/categories/new" class="button">
+      {{ 'app.models.categories.add' | t }}
+    </a>
+  </div>
+  <div class="my-6 bg-white rounded shadow-md">
+    {% if categories.results.size > 0 %}
+      <table class="w-full text-left border-collapse">
+        <thead>
+          <tr>
+            <th class="px-6 py-4 text-sm font-bold uppercase border-b bg-grey-lightest text-grey-dark border-grey-light">
+              {{ "app.models.categories.form.key" | t }}
+            </th>
+            <th class="px-6 py-4 text-sm font-bold uppercase border-b bg-grey-lightest text-grey-dark border-grey-light">
+              {{ "app.models.categories.form.uuid" | t }}
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for category in categories.results %}
+            <tr class="hover:bg-grey-lighter">
+              <td class="px-6 py-4 border-b border-grey-light">
+                <a href="/categories/show/{{ category.id }}">
+                  {{ category.key }}
+                </a>
+              </td>
+              <td class="px-6 py-4 border-b border-grey-light">
+                <a href="/categories/show/{{ category.id }}">
+                  {{ category.uuid }}
+                </a>
+              </td>
+              <td class="px-6 py-4 border-b border-grey-light">
+                <a href="/categories/edit?id={{ category.id }}" class="button">
+                  {{ 'app.models.categories.edit' | t }}
+                </a>
+                <form action="/categories" method="post" class="inline ml-2" onSubmit="if(!confirm('{{ 'app.confirm-delete' | t }}')){ return false; }" >
+                  {% include 'authenticity_token' %}
+                  <input type="hidden" name="_method" value="delete" />
+                  <input type="hidden" name="id" value="{{ category.id }}">
 
-<div class="container mx-auto">
-  <div class="flex flex-wrap -mx-4 cards">
-    {% if items.results.size > 0 %}
-    {% for item in items.results %}
-      {% include 'theme/simple/items/card', item: item %}
-    {% endfor %}
+                  <button id="deletebutton" class="button button-secondary">{{ 'app.models.shared.delete' | t }}</button>
+                </form>
+              </td>
+            </tr>
+          {% endfor %}
+        </tbody>
+      </table>
     {% else %}
-      <p class="container my-8 text-lg">No items found.</p>
+      {% include 'theme/simple/categories/empty_state' %}
     {% endif %}
   </div>
-</div>
-
-<div class="text-gray-900">
-  {% for c in categories %}
-    {% assign ident = c | split: '/' | size %}
-    <a class="m-2 text-gray-900 hover:text-gray-900" href="/c/{{c}}">
-      {% if ident == 3 %}
-        <small>
-          {% print c %}
-        </small>
-      {% else %}
-        <strong>
-          {% print c %}
-        </strong>
-      {% endif %}
-    </a>
-  {% endfor %}
 </div>
