--- a/app/views/pages/categories/delete.liquid
+++ b/app/views/pages/categories/delete.liquid
@@ -3,9 +3,12 @@ slug: categories
 method: delete
 ---
 {% liquid
-  function object = 'lib/data/queries/categories/find', id: context.params.id
-  function object = 'lib/commands/categories/delete', object: object
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true
+  include 'lib/must_be_superadmin'
 
+  function object = 'lib/data/queries/categories/find', id: context.params.id
+
+  function object = 'lib/commands/categories/delete', object: object
   if object.valid
     include 'redirect_to', url: '/categories', notice: 'app.models.shared.deleted'
   else
