--- a/app/views/partials/theme/simple/home/index.liquid
+++ b/app/views/partials/theme/simple/home/index.liquid
@@ -6,8 +6,8 @@
       <h3 class="mb-3 text-3xl">
         {% print feed[0] | t: scope: 'app.home.feeds' %}
       </h3>
-      <div class="grid grid-cols-3 gap-5">
-        {% for item in feed[1].results %}
+      <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-5">
+		{% for item in feed[1].results %}
           {% include 'theme/simple/home/card', actor: item.payload.actor, target: item.payload.target, object: item.payload.object, type: item.payload.type %}
         {% endfor %}
       </div>
