category-as-model

--- a/app/views/pages/admin/categories/index.liquid
+++ b/app/views/pages/admin/categories/index.liquid
@@ -5,5 +5,5 @@
   function list = 'lib/data/queries/categories/search'
 
   include 'theme/simple/admin/menu', section: 'categories'
-  include 'theme/simple/admin/categories/index', list: list, section: 'categories'
+  include 'theme/simple/categories/index', categories: list
 %}
