--- a/app/views/partials/lib/commands/categories/create/build.liquid
+++ b/app/views/partials/lib/commands/categories/create/build.liquid
@@ -2,7 +2,7 @@
   {
     "id": {{ object.id | json }},
     "key": {{ object.key | json }},
-    "uuid": {{ object.uuid | json }}
+    "uuid": {{ '' | uuid | json }}
   }
 {% endparse_json %}
 
