--- a/app/views/partials/lib/commands/categories/update/build.liquid
+++ b/app/views/partials/lib/commands/categories/update/build.liquid
@@ -1,8 +1,7 @@
 {% parse_json object %}
   {
     "id": {{ object.id | json }},
-    "key": {{ object.key | json }},
-    "uuid": {{ object.uuid | json }}
+    "key": {{ object.key | json }}
   }
 {% endparse_json %}
 
