category-as-model (#35)
* category-as-model

* add to home

* category-as-model

--- a/app/views/pages/categories.liquid
+++ b/app/views/pages/categories.liquid
@@ -5,7 +5,8 @@ slug: c
   assign template = "/c/{+category}"
   assign query = context.location.pathname | extract_url_params: template
 
-  function items = 'lib/data/queries/items/search', query: query, limit: 100
-  function categories = 'lib/data/queries/categories/search'
-  include 'theme/simple/categories/index', items: items, category: query.category, categories: categories
+  function filters = 'lib/data/queries/search/filters', query: query
+  function items = 'lib/data/queries/items/search', params: query, limit: 21
+
+  include 'theme/simple/items/index', items: items, category: query.category, categories: categories
 %}
