--- a/app/views/partials/lib/commands/categories/update/check.liquid
+++ b/app/views/partials/lib/commands/categories/update/check.liquid
@@ -1,8 +1,12 @@
 {% liquid
-  assign c = '{ "valid": true, "errors": {} }' | parse_json
+  assign c = '{ "errors": {}, "valid": true }' | parse_json
 
   if object.id == blank
     include 'lib/register_error', contract: c, field_name: 'id', key: 'app.errors.blank'
+  endif
+
+  if object.key == blank
+    include 'lib/register_error', contract: c, field_name: 'key', key: 'app.errors.blank'
   endif
 
   hash_assign object['valid'] = c.valid
