Fixed main header responsiveness

--- a/app/views/partials/theme/simple/layout/header.liquid
+++ b/app/views/partials/theme/simple/layout/header.liquid
@@ -1,6 +1,6 @@
-<header class=" ">
-  <div class="container flex flex-col flex-wrap items-center py-5 mx-auto md:flex-row">
-    <a class="flex items-center mb-4 font-medium text-gray-900 md:mb-0" href="/">
+<header>
+  <div class="container flex flex-col flex-wrap items-center pt-5 mx-auto md:flex-row">
+    <a class="flex items-center mb-5 font-medium text-gray-900" href="/">
       <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round"
         stroke-linejoin="round" stroke-width="2" class="w-10 h-10 p-2 text-white bg-blue-500 rounded-full"
         viewBox="0 0 24 24">
@@ -9,22 +9,23 @@
       <span class="ml-3 text-xl">{{ 'app.title' | t }}</span>
     </a>
 
-    <nav class="flex flex-wrap items-center justify-center text-base md:ml-auto">
-      {% include 'theme/simple/home/quick_search_form' %}
-      <a href="/dashboard/items/new" class="mr-5 hover:text-gray-900">{{ 'app.header.add' | t }}</a>
-      <a href="/search" class="mr-5 hover:text-gray-900">{{ 'app.items.list' | t }}</a>
-      <a href="/groups" class="mr-5 hover:text-gray-900">{{ 'app.groups.list' | t }}</a>
+	{% include 'theme/simple/home/quick_search_form' %}
+
+    <nav class="flex flex-wrap items-center justify-center text-base mb-5">
+      <a href="/dashboard/items/new" class="p-3 hover:text-gray-900">{{ 'app.header.add' | t }}</a>
+      <a href="/search" class="p-3 hover:text-gray-900">{{ 'app.items.list' | t }}</a>
+      <a href="/groups" class="p-3 hover:text-gray-900">{{ 'app.groups.list' | t }}</a>
 
       {% if context.current_user.id %}
         {% assign superadmins = context.constants.superadmins | split: ',' %}
         {% if superadmins contains context.current_user.email %}
-          <a href="/admin" class="mr-5 hover:text-gray-900">{{ 'app.admin' | t }}</a>
+          <a href="/admin" class="p-3 hover:text-gray-900">{{ 'app.admin' | t }}</a>
         {% endif %}
-        <a href="/dashboard" class="mr-5 hover:text-gray-900">{{ 'app.header.feed' | t }}</a>
-        <a href="/dashboard/inbox" class="mr-5 hover:text-gray-900">{{ 'app.header.chat' | t }}</a>
+        <a href="/dashboard" class="p-3 hover:text-gray-900">{{ 'app.header.feed' | t }}</a>
+        <a href="/dashboard/inbox" class="p-3 hover:text-gray-900">{{ 'app.header.chat' | t }}</a>
 
         <div x-data="{ dropdownOpen: false }" class="relative">
-          <button @click="dropdownOpen = !dropdownOpen" class="relative z-10 block rounded-md bg-white p-2 focus:outline-none" data-menu-dropdown>
+          <button @click="dropdownOpen = !dropdownOpen" class="relative z-10 block rounded-md bg-white ml-3 p-2 focus:outline-none" data-menu-dropdown>
             <span class="mr-2 hover:text-gray-900">{{profile.first_name | default: profile.name }}</span>
             <svg class="h-5 w-5 text-gray-800 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"> <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd" /> </svg>
           </button>
@@ -43,7 +44,7 @@
           </div>
         </div>
       {% else %}
-        <a href="/sessions/new" class="button button-sm">
+        <a href="/sessions/new" class="button button-sm ml-3">
           {{ 'app.login' | t }}
         </a>
       {% endif %}
