--- a/app/views/partials/theme/simple/home/quick_search_form.liquid
+++ b/app/views/partials/theme/simple/home/quick_search_form.liquid
@@ -1,4 +1,4 @@
-<div class="mr-5">
+<div class="mr-3 mb-5 md:ml-auto">
   <form action="/quick_search" name="search">
     <input class="form-input mr-2" name="keyword" type="text" placeholder="{% print 'app.quick_search.name' | t %}" />
     <button name="submit" value="search" class="button button-secondary button-sm">{{ 'app.search.search' | t  }}</button>
