Photo: add images on item edit; keep images on create when validation failed

--- a/app/views/pages/dashboard/items/create.liquid
+++ b/app/views/pages/dashboard/items/create.liquid
@@ -13,7 +13,8 @@ method: post
   else
     function filters = 'lib/data/queries/search/filters', query: context.params
     function presigned_url = 'lib/data/queries/presigned_url'
+    function photos = 'lib/data/queries/photos/search', object_uuid: object.uuid
 
-    include 'theme/simple/items/new', item: object, lib: filters, presigned_url: presigned_url
+    include 'theme/simple/items/new', item: object, lib: filters, presigned_url: presigned_url, photos: photos.results
   endif
 %}
