--- a/app/views/partials/theme/simple/activities/feed_unit/type/user_joined_group.liquid
+++ b/app/views/partials/theme/simple/activities/feed_unit/type/user_joined_group.liquid
@@ -1,1 +1,4 @@
-{% print payload.type | t: actor: payload.actor.name, target: payload.target.name, url: payload.target.url, scope: 'app.activities.types'  %}
+{{ payload.type | t: actor: payload.actor.name,
+     target: payload.target.name,
+     url: payload.target.url,
+     scope: 'app.activities.types' }}
