--- a/app/views/partials/theme/simple/admin/index.liquid
+++ b/app/views/partials/theme/simple/admin/index.liquid
@@ -11,7 +11,7 @@
               <tr>
                 {% for user in users.results %}
                   <td>{% print user.id %}</td>
-                  <td>{% print user.email %}</td>
+                  <td>{{ user.email }}</td>
                   <td>{% print user.created_at  %}</td>
                 {% endfor %}
               </tr>
