--- a/app/views/partials/theme/simple/groups/member_card_small.liquid
+++ b/app/views/partials/theme/simple/groups/member_card_small.liquid
@@ -10,7 +10,7 @@
     <div class="p-4">
       <h2 class="mb-1 font-medium text-gray-900 truncate">
         <a href="/profile/{{user.slug}}">
-          {% print user.first_name %} {{ user.last_name  }}
+          {{ user.first_name }} {{ user.last_name  }}
         </a>
       </h2>
     </div>
