--- a/app/views/partials/theme/simple/activities/feed_unit/type/comment_created.liquid
+++ b/app/views/partials/theme/simple/activities/feed_unit/type/comment_created.liquid
@@ -1,1 +1,1 @@
-{% print payload.type | t: actor: payload.actor.name, target: payload.target.name, url: payload.target.url, type: payload.target.type, scope: 'app.activities.types'  %}
+{{ payload.type | t: actor: payload.actor.name, target: payload.target.name, url: payload.target.url, type: payload.target.type, scope: 'app.activities.types' }}
