--- a/app/views/partials/theme/simple/activities/feed_unit/type/item_created.liquid
+++ b/app/views/partials/theme/simple/activities/feed_unit/type/item_created.liquid
@@ -1,5 +1,4 @@
-{% print payload.type | t: actor: payload.actor.username,
+{{ payload.type | t: actor: payload.actor.username,
      object_id: payload.object.id,
      name: payload.object.name,
-     scope: 'app.activities.types'  %}
-
+     scope: 'app.activities.types' }}
