--- a/app/views/partials/theme/simple/activities/feed_unit/type/order_status.liquid
+++ b/app/views/partials/theme/simple/activities/feed_unit/type/order_status.liquid
@@ -1,11 +1,11 @@
 {% if payload.object.name %}
   {% assign status = payload.object.name | t %}
 {% endif %}
-{%
-  print payload.type | t: actor: payload.actor.username,
+
+{{ payload.type | t: actor: payload.actor.username,
     target: payload.target.type,
     target_id: payload.target.id,
     target: payload.target,
     status: status,
     scope: 'app.activities.types'
-%}
+}}
