--- a/app/views/partials/theme/simple/activities/feed_unit/type/user_activity.liquid
+++ b/app/views/partials/theme/simple/activities/feed_unit/type/user_activity.liquid
@@ -1,1 +1,5 @@
-{% print payload.type | t: actor: payload.actor.name, obj: payload.object.type, target: payload.target.name, url: payload.target.url, scope: 'app.activities.types'  %}
+{{ payload.type | t: actor: payload.actor.name,
+     obj: payload.object.type,
+     target: payload.target.name,
+     url: payload.target.url,
+     scope: 'app.activities.types' }}
