--- a/app/views/partials/theme/simple/admin/users/index.liquid
+++ b/app/views/partials/theme/simple/admin/users/index.liquid
@@ -14,7 +14,7 @@
         <td>{{ record.created_at | l }}</td>
         {% if record.profile %}
           <td>
-            <a href="/profile/{% print record.profile.slug %}">{{ record.profile.name }}</a>
+            <a href="/profile/{{ record.profile.slug }}">{{ record.profile.name }}</a>
             <div class="text-xs">
               {{ 'admin.menu.users.slug' | t }}  {{ record.profile.slug }} {{ 'admin.menu.users.id' | t }} {{ record.profile.id }} {{ 'admin.menu.users.uuid' | t }} {{ record.profile.uuid }}
             </div>
