--- a/app/views/partials/theme/simple/dashboard/items/index.liquid
+++ b/app/views/partials/theme/simple/dashboard/items/index.liquid
@@ -15,7 +15,7 @@
           <td class="px-4 py-2 border-b">
             {% function item_url = 'link_to', path: '/items/', item: item %}
             <a href="{{ item_url }}">
-              {% print item.name %}
+              {{ item.name }}
               <small> {% echo item.status.name | default: 'app.item_statuses.none' | t %}</small>
             </a>
           </td>
