--- a/app/views/partials/theme/simple/home/category.liquid
+++ b/app/views/partials/theme/simple/home/category.liquid
@@ -8,7 +8,7 @@
       <a href="{% render 'link_to', category: object.key %}">{{ item.key | t }}</a>
     </h2>
     <p class="mt-2 break-all">
-      {% print object.key %}
+      {{ object.key }}
     </p>
   </div>
 </div>
