--- a/app/views/pages/items/index.liquid
+++ b/app/views/pages/items/index.liquid
@@ -5,7 +5,7 @@ slug: search
 {% liquid
   function current_profile = 'lib/current_profile', user_id: context.current_user.id, followships: true
   function items = 'lib/data/queries/items/search', params: context.params, limit: 21
-  function filters = 'lib/data/queries/search/filters', query: context.params
+  function filters = 'lib/data/queries/search/filters', query: items.query
 
   include 'theme/simple/items/index', items: items, filters: filters, current_profile: current_profile
   render 'theme/simple/items/follow.js', authenticity_token: context.authenticity_token
