--- a/app/views/partials/lib/data/queries/items/search.liquid
+++ b/app/views/partials/lib/data/queries/items/search.liquid
@@ -2,5 +2,7 @@
   function query = 'lib/data/queries/items/search/build', limit: limit, owner: owner, params: params
   function items = 'lib/data/queries/items/search/execute', query: query
 
+  hash_assign items['query'] = query
+
   return items
 %}
