--- a/app/views/partials/lib/data/queries/photos/search.liquid
+++ b/app/views/partials/lib/data/queries/photos/search.liquid
@@ -1,4 +1,8 @@
 {% liquid
+  if object_uuid == blank
+    return null
+  endif
+
   graphql r = 'photos/search', object_uuid: object_uuid
 
   return r.photos
