Photos: allow to remove photos on edit item/group

--- a/app/views/pages/dashboard/groups/update.liquid
+++ b/app/views/pages/dashboard/groups/update.liquid
@@ -7,7 +7,7 @@ method: put
 
   function object = 'lib/commands/call', object: context.params.group, command: 'groups/update', selection: 'model_update'
   if object.valid
-    include 'redirect_to', url: '/dashboard/groups?a=b'
+    include 'redirect_to', url: '/dashboard/groups'
   else
     graphql presigned_url = 'photos/presign' | dig: 'presigned'
     include 'theme/simple/dashboard/groups/edit', object: object, presigned_url: presigned_url
