Fixed responsiveness on user profile page

--- a/app/views/partials/theme/simple/profile/show.liquid
+++ b/app/views/partials/theme/simple/profile/show.liquid
@@ -1,5 +1,5 @@
-<div class="flex">
-  <div class="w-56 mr-5">
+<div class="flex flex-col md:flex-row ">
+  <div class="mr-5 flex-shrink-0">
     {% liquid
       render 'theme/simple/profile/card', user: user, current_profile: current_profile
 
