Keep photo on group creating when validation fail

--- a/app/views/pages/dashboard/groups/create.liquid
+++ b/app/views/pages/dashboard/groups/create.liquid
@@ -11,6 +11,8 @@ method: post
     include 'redirect_to', url: '/dashboard/groups'
   else
     graphql presigned_url = 'photos/presign' | dig: 'presigned'
-    include 'theme/simple/dashboard/groups/new', object: object, presigned_url: presigned_url
+    function photos = 'lib/data/queries/photos/search', object_uuid: object.uuid
+
+    include 'theme/simple/dashboard/groups/new', object: object, presigned_url: presigned_url, photos: photos.results
   endif
 %}
