--- a/app/views/partials/theme/simple/items/index.liquid
+++ b/app/views/partials/theme/simple/items/index.liquid
@@ -1,6 +1,6 @@
 <div class="container mx-auto">
   <form action="/search" name="search">
-    {% include 'theme/simple/home/search_form', query: search.query, filters: filters %}
+    {% render 'theme/simple/home/search_form', query: search.query, filters: filters %}
 
     <div class="grid grid-cols-3 gap-5">
       {% for item in items.results %}
