A little spacing polish for 404 page

--- a/app/views/partials/theme/simple/404.liquid
+++ b/app/views/partials/theme/simple/404.liquid
@@ -1,5 +1,5 @@
-<div class='flex-wrap items-center w-full text-2xl text-center'>
+<div class='flex-wrap items-center w-full my-10 text-2xl text-center'>
   <img alt="Page missing" src="{{ 'images/404.svg' | asset_url }}" class="w-1/2 mx-auto" />
 
-  <p class="mt-4 text-lg">{{ 'app.page_not_found' | t }}</p>
+  <p class="mt-5 text-lg">{{ 'app.page_not_found' | t }}</p>
 </div>
