Move vendor js to its own directory

--- a/app/views/partials/theme/simple/layout/scripts.liquid
+++ b/app/views/partials/theme/simple/layout/scripts.liquid
@@ -3,4 +3,4 @@
 <script src="{{ 'js/app.js' | asset_url }}"></script>
 
 {% comment %}TODO: rewrite navigation dropdown in vanila js{% endcomment %}
-<script src="{{ 'js/vendor/alpine.min.js' | asset_url }}"></script>
+<script src="{{ 'vendor/js/alpine.min.js' | asset_url }}"></script>
