--- a/app/views/pages/profile/index.liquid
+++ b/app/views/pages/profile/index.liquid
@@ -32,7 +32,7 @@ slug: profile
   elsif section == 'followers'
     function list = 'lib/data/queries/relationships/search', limit: 20, name: 'followship', r_id: profile_id
   elsif section == 'products'
-    function list = 'lib/data/queries/items/search', query: context.params, limit: 20, owner: user.id
+    function list = 'lib/data/queries/items/search', query: context.params, limit: 20, owner: profile_id
   endif
 
   render 'theme/simple/profile/show', section: section, user: profile, list: list, current_profile: current_profile
